# flask_training

./: .env  .gitignore  README.MD  dev_config.json  docker-compose.yaml  pyproject.toml  requirements.txt  run.py  wsgi.py
blog/: app.py  configs.py  extension.py  models.py
blog/admin/: __init__.py  views.py
blog/api/: __init__.py  article.py  author.py  tag.py  user.py
blog/api/permissions/: user.py
blog/article/: views.py
blog/auth/: views.py
blog/forms/: article.py  user.py
blog/models/: __init__.py  article.py  author.py  tag.py  user.py
blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
blog/templates/: base.html  navbar.html
blog/templates/article/: detail.html  list.html
blog/templates/articles/: create.html  details.html
blog/templates/auth/: login.html  register.html
blog/templates/users/: detail.html  list.html
blog/user/: views.py
migrations/versions/: 5d52f13a7902_.py  cfe077bac4a4_.py  f2548603ca9a_.py
